--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
-*{
-    margin: 0;
-    padding: 0;
+* {
+  margin: 0;
+  padding: 0;
 }
 
 @import url("https://fonts.googleapis.com/css?family=Open+Sans|Roboto:400,700&display=swap");
@@ -48,6 +48,7 @@
   --max-width: 1170px;
   --fixed-width: 620px;
 }
+
 /*
 =============== 
 Global Styles
@@ -61,6 +62,7 @@ Global Styles
   padding: 0;
   box-sizing: border-box;
 }
+
 body {
   font-family: var(--ff-secondary);
   background: var(--clr-grey-10);
@@ -68,15 +70,19 @@ body {
   line-height: 1.5;
   font-size: 0.875rem;
 }
+
 ul {
   list-style-type: none;
 }
+
 a {
   text-decoration: none;
 }
+
 img:not(.logo) {
   width: 100%;
 }
+
 img {
   display: block;
 }
@@ -91,38 +97,49 @@ h4 {
   margin-bottom: 0.75rem;
   font-family: var(--ff-primary);
 }
+
 h1 {
   font-size: 3rem;
 }
+
 h2 {
   font-size: 2rem;
 }
+
 h3 {
   font-size: 1.25rem;
 }
+
 h4 {
   font-size: 0.875rem;
 }
+
 p {
   margin-bottom: 1.25rem;
   color: var(--clr-grey-5);
 }
+
 @media screen and (min-width: 800px) {
   h1 {
     font-size: 4rem;
   }
+
   h2 {
     font-size: 2.5rem;
   }
+
   h3 {
     font-size: 1.75rem;
   }
+
   h4 {
     font-size: 1rem;
   }
+
   body {
     font-size: 1rem;
   }
+
   h1,
   h2,
   h3,
@@ -130,6 +147,7 @@ p {
     line-height: 1;
   }
 }
+
 /*  global classes */
 
 .btn {
@@ -146,10 +164,12 @@ p {
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.2);
   border-radius: var(--radius);
 }
+
 .btn:hover {
   color: var(--clr-white);
   background: var(--clr-black);
 }
+
 /* section */
 .section {
   padding: 5rem 0;
@@ -160,19 +180,16 @@ main {
   display: grid;
   place-items: center;
 }
-/*
-=============== 
-Menu
-===============
-*/
 
 .menu {
   padding: 5rem 0;
 }
+
 .title {
   text-align: center;
   margin-bottom: 2rem;
 }
+
 .underline {
   width: 5rem;
   height: 0.25rem;
@@ -180,11 +197,13 @@ Menu
   margin-left: auto;
   margin-right: auto;
 }
+
 .btn-container {
   margin-bottom: 4rem;
   display: flex;
   justify-content: center;
 }
+
 .filter-btn {
   background: transparent;
   border-color: var(--clr-gold);
@@ -198,10 +217,12 @@ Menu
   cursor: pointer;
   transition: var(--transition);
 }
+
 .filter-btn:hover {
   background: var(--clr-gold);
   color: var(--clr-white);
 }
+
 .section-center {
   width: 90vw;
   margin: 0 auto;
@@ -210,28 +231,34 @@ Menu
   gap: 3rem 2rem;
   justify-items: center;
 }
+
 .menu-item {
   display: grid;
   gap: 1rem 2rem;
   max-width: 25rem;
 }
+
 .photo {
   object-fit: cover;
   height: 200px;
   border: 0.25rem solid var(--clr-gold);
   border-radius: var(--radius);
 }
+
 .item-info header {
   display: flex;
   justify-content: space-between;
   border-bottom: 0.5px dotted var(--clr-grey-5);
 }
+
 .item-info h4 {
   margin-bottom: 0.5rem;
 }
+
 .price {
   color: var(--clr-gold);
 }
+
 .item-text {
   margin-bottom: 0;
   padding-top: 1rem;
@@ -243,15 +270,32 @@ Menu
     gap: 0 1.25rem;
     max-width: 40rem;
   }
+
   .photo {
     height: 175px;
   }
+
+
 }
+
+
+@media screen and (max-width: 768px) {
+  .btn-container {
+    display: block;
+
+  }
+
+
+
+
+}
+
 @media screen and (min-width: 1200px) {
   .section-center {
     width: 95vw;
     grid-template-columns: 1fr 1fr;
   }
+
   .photo {
     height: 150px;
   }
